; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/autofit/extr_afshaper.c_af_shaper_get_elem.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/freetype/src/autofit/extr_afshaper.c_af_shaper_get_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@FT_LOAD_NO_SCALE = common dso_local global i32 0, align 4
@FT_LOAD_NO_HINTING = common dso_local global i32 0, align 4
@FT_LOAD_IGNORE_TRANSFORM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @af_shaper_get_elem(%struct.TYPE_5__* %0, i8* %1, i32 %2, i64* %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64* %3, i64** %9, align 8
  store i64* %4, i64** %10, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %11, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = bitcast i8* %18 to i32*
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @FT_UNUSED(i32 %21)
  %23 = load i64*, i64** %9, align 8
  %24 = icmp ne i64* %23, null
  br i1 %24, label %25, label %35

25:                                               ; preds = %5
  %26 = load i32, i32* %11, align 4
  %27 = load i32, i32* %12, align 4
  %28 = load i32, i32* @FT_LOAD_NO_SCALE, align 4
  %29 = load i32, i32* @FT_LOAD_NO_HINTING, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @FT_LOAD_IGNORE_TRANSFORM, align 4
  %32 = or i32 %30, %31
  %33 = load i64*, i64** %9, align 8
  %34 = call i32 @FT_Get_Advance(i32 %26, i32 %27, i32 %32, i64* %33)
  br label %35

35:                                               ; preds = %25, %5
  %36 = load i64*, i64** %10, align 8
  %37 = icmp ne i64* %36, null
  br i1 %37, label %38, label %40

38:                                               ; preds = %35
  %39 = load i64*, i64** %10, align 8
  store i64 0, i64* %39, align 8
  br label %40

40:                                               ; preds = %38, %35
  %41 = load i32, i32* %12, align 4
  ret i32 %41
}

declare dso_local i32 @FT_UNUSED(i32) #1

declare dso_local i32 @FT_Get_Advance(i32, i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
